--- a/mern-backend-template/package.json
+++ b/mern-backend-template/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --runInBand",
     "start": "node dist/server.bundle.js",
     "dev": "nodemon --exec babel-node server.js",
     "build": "webpack --config webpack.server.js"
@@ -22,8 +22,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.0"
+    "mongoose": "^8.10.0",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
