--- a/mern-backend-template/package.json
+++ b/mern-backend-template/package.json
@@ -24,7 +24,9 @@
     "helmet": "^8.0.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.10.0",
+    "morgan": "^1.10.0",
     "supertest": "^7.0.0"
   },
   "devDependencies": {
