Added README.md as well docker-compose.yml

--- a/mern-frontend-template/Dockerfile
+++ b/mern-frontend-template/Dockerfile
@@ -1,4 +1,4 @@
-# Use an official Node.js image as the base
+# Use an official Node.js image as the base for building the app
 FROM node:18-alpine AS build
 
 # Set working directory inside the container
@@ -11,14 +11,17 @@ RUN npm install --frozen-lockfile
 # Copy the entire project into the container
 COPY . .
 
-# Build the frontend
+# Run TypeScript compilation first to generate .d.ts files
+RUN npx tsc --build --force
+
+# Build the frontend (React + Vite)
 RUN npm run build
 
 # Use a lightweight web server (nginx) to serve the frontend
 FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Expose the default port
+# Expose the default HTTP port
 EXPOSE 80
 
 # Start Nginx when the container starts
