--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,42 @@
-version: "3.9"
-
-
 services:
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    environment:
-      - VITE_API_URL=http://localhost:5000
-      - VITE_PORT=8080
+  mongo:
+    image: mongo:6.0
+    container_name: mongo
+    restart: always
     ports:
-      - "8080:80"
-    depends_on:
-      - backend
-
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
 
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
-    environment:
-      - MONGO_URI=mongodb://mongo:27017/mern-db
-      - FRONTEND_URL=http://localhost:8080
-      - JWT_SECRET=your_jwt_secret
-      - PORT=5000
+    container_name: mern-backend
     ports:
       - "5000:5000"
+    environment:
+      MONGO_URI: mongodb://mongo:27017/mern-db
+      FRONTEND_URL: http://localhost:8080
+      JWT_SECRET: your_jwt_secret
+      PORT: 5000
+      NODE_ENV: production
     depends_on:
       - mongo
-
-
-  mongo:
-    image: mongo:5
-    container_name: mongodb
-    restart: always
-    ports:
-      - "27017:27017"
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=admin
     volumes:
-      - mongo-data:/data/db
+      - ./backend:/app
+    command: npm run dev
+
+  frontend:
+    build:
+      context: ./frontend
+    container_name: mern-frontend
+    ports:
+      - "8080:80"
+    environment:
+      VITE_BACKEND_URL: http://localhost:5000
+      VITE_PORT: 8080
+    depends_on:
+      - backend
 
 
 volumes:
